--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -76,9 +76,8 @@ span:hover {
     padding-bottom: 1.5vh;
     padding-right: 3vw;
     padding-left: 3vw;
-    border: 2px solid white;
     text-decoration: none;
-    font-size: 0.1em;
+    font-size: 20px;
 }
 
 #elements-area {
