--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
     <title>SOMETHING</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Raleway&family=Roboto:wght@300&display=swap">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
   </head>
@@ -22,7 +23,9 @@
         <span>G</span>
         <span>!</span>
         <p class="description">TURN YOUR IMAGE INTO TELEGRAM STICKER</p>
+        <a href="gallery.html">click to go to gallery</a>
         <div id="elements-area">
+
           <form class="form">
             <label id="owner-input-label" class="txt-input">
               Owner id:
@@ -51,7 +54,7 @@
         <div id="output-area">
           <img id="image-output"/>
           <br>
-          <a id="download-image-button"></a>
+          <a id="download-image-button" class="link"></a>
         </div>
       </div>
     </div>
