--- a/src/main/webapp/static/style.css
+++ b/src/main/webapp/static/style.css
@@ -114,7 +114,7 @@ span:hover {
     color: #f7f7f7;
 }
 
-#image-input-label {
+.input-button {
     color: black;
     background-color: #f7f7f7;
     font-weight: 100 !important;
@@ -122,7 +122,7 @@ span:hover {
     padding: 0 11px;
 }
 
-#image-input-label:hover {
+.input-button:hover {
     background-color: black;
     color: #f7f7f7 !important;
 }
